--- a/AngularShop/src/app/modal/custom-modal/custom-modal.component.html
+++ b/AngularShop/src/app/modal/custom-modal/custom-modal.component.html
@@ -1,1 +1,13 @@
-<p>custom-modal works!</p>
+<ng-template #myModal let-modal>
+    <div class="modal-header">
+        <h5 class="modal-title"  [style.color]=colorTitle><strong> {{title}} </strong></h5>
+        <button type="button" (click)="modal.dismiss()" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-body">
+        <p>{{message}}</p>
+    </div>
+    <div class="modal-footer">
+        <button *ngFor="let functionModel of functionModels" type="button" class="btn btn-secondary" (click)="functionModel.foo(); modal.dismiss()" >{{functionModel.message}}</button>
+        <button type="button" class="btn btn-secondary" (click)="modal.dismiss()">{{"CLOSE" | translate}}</button>
+    </div>
+  </ng-template>
