--- a/AngularShop/src/app/thank-you-page/thank-you-page.component.html
+++ b/AngularShop/src/app/thank-you-page/thank-you-page.component.html
@@ -1,1 +1,14 @@
-<p>thank-you-page works!</p>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body text-center">
+            <h2 class="card-title">{{"THANK YOU" | translate}}</h2>
+            <p class="card-text">{{"APPRECIATION MESSAGE" | translate}}</p>
+            <a href="/home" class="btn btn-secondary">{{"HOME" | translate}}</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
