--- a/AngularShop/src/app/cart/cart.component.html
+++ b/AngularShop/src/app/cart/cart.component.html
@@ -1,1 +1,82 @@
-<p>cart works!</p>
+<br>
+
+<!--Popup section-->
+<app-custom-modal #CustomModalComponent> </app-custom-modal>
+<!--Popup section ends-->
+
+<div class="container" #container>
+  <h1 class="mb-5">{{'SHOPPING CART' | translate}}</h1>
+  <div class="row">
+    <div class="col-lg-8">
+
+      <div *ngFor="let item of cartItems | paginate: { itemsPerPage: 5, currentPage: page }" class="card mb-4">
+
+        <div class="card-body">
+          <div class="row align-items-center">
+            <div class="col-md-3 d-flex justify-content-center align-items-center"  [routerLink]="['/product/']+'item.product.productId'">
+              <img src="https://achau.ch/api/images/products/thumbnails/tn_{{item.product.productId}}.jpg"
+                onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/No-Image-Placeholder.svg/330px-No-Image-Placeholder.svg.png'"
+                alt="Product Image" class="img-fluid">
+            </div>
+            <div class="col-md-4">
+              <h5 class="card-title"> <a [href]="['/product/']+'item.product.productId'" style="text-decoration:none; color: inherit;">{{item.product.productId}} - {{item.product.productName}}</a></h5>
+              <p class="card-text text-muted">{{item.product.weight}}</p>
+            </div>
+            <div class="col-md-2">
+              <p class="card-text">{{formatPrice(calculatedPrice(item.product.price,item.quantity))}} <i class="bi bi-info-circle" data-bs-toggle="tooltip" data-bs-tooltip="Information" [title]="getTranslation('PRICE VARIATION MESSAGE')"></i></p>
+            </div>
+
+            <div class="col-md-2">
+              <input #quantity type="number" class="form-control" value="{{item.quantity}}">
+              <a *ngIf="hasCarton(item.product)">≈{{getCarton(item)}} {{"CARTON" | translate}} <i class="bi bi-box-fill"></i></a>
+              <a *ngIf="!hasCarton(item.product)">{{"UNIT" | translate}}</a>
+              <div class="mt-2">
+                <button class="btn btn-secondary" (click)="updateCartItem(item,quantity.value)"> <i class="bi bi-arrow-repeat"></i>{{"UPDATE" | translate}}</button>
+              </div>
+              <div class="mt-2">
+                <button class="btn btn-danger" (click)="popupDelete(item)"> <i class="bi bi-trash"></i> {{"REMOVE" | translate}}</button>
+              </div>
+            </div>
+            <div id="msg-{{item.product.productId}}" class="alert alert-success" style="display: none;"> {{"CHANGES SAVED"| translate}} </div>
+          </div>
+        </div>
+      </div>
+
+      <pagination-controls (pageChange)="page = $event" [nextLabel]="getTranslation('NEXT')"
+      [previousLabel]="getTranslation('PREVIOUS')"></pagination-controls>
+
+      <a [routerLink]="['/checkout']" class="btn btn-secondary w-100 my-4">{{"PROCEED TO CHECKOUT" | translate}}</a>
+     
+
+    </div>
+    <div *ngIf="logged" class="col-lg-4">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">{{"CART TOTALS" | translate}}</h5>
+
+            <div  class="row mb-4">
+              <div class="col-lg-8">{{"SUBTOTAL" | translate}}  </div>
+              <div class="col-lg-4">{{formatPrice(getSubtotal())}}</div>
+            </div>
+
+            <div  class="row mb-4">
+              <div class="col-lg-8">{{"TAX" | translate}}  </div>
+              <div class="col-lg-4">{{formatPrice(getTotalTax())}}</div>
+            </div>
+
+            <div  class="row mb-4">
+              <div class="col-lg-8">{{"TOTAL" | translate}}  </div>
+              <div class="col-lg-4">{{formatPrice(getTotal())}}*</div>
+            </div>
+      
+
+          <div class="mb-4" >
+            {{"PRICE VARIATION MESSAGE"|translate}} {{"MINIMUM ORDER MESSAGE" | translate}}
+          </div>
+
+          <a [routerLink]="['/checkout']" class="btn btn-secondary w-100">{{"PROCEED TO CHECKOUT" | translate}}</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
