--- a/AngularShop/src/app/footer/footer.component.html
+++ b/AngularShop/src/app/footer/footer.component.html
@@ -1,1 +1,76 @@
-<p>footer works!</p>
+<footer class="bg-dark text-center text-lg-start">
+
+    <!--Popup section-->
+    <app-custom-modal #CustomModalComponent> </app-custom-modal>
+    <!--Popup section ends-->
+
+    <div class="container p-4">
+        <div class="row">
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase text-light">{{'CONTACT' | translate}}</h5>
+                <ul class="list-unstyled mb-0">
+                    <li>
+                        <div class="text-light">Company name</div>
+                    </li>
+                    <li>
+                        <div class="text-light">Street</div>
+                    </li>
+                    <li>
+                        <div class="text-light">ZIP City</div>
+                    </li>
+                    <li>
+                        <div class="text-light">Country</div>
+                    </li>
+                    <li>
+                        <div class="text-light">123456789</div>
+                    </li>
+                    <li>
+                        <div class="text-light"><a href="mailto:info@mail.com">company mail</a></div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase text-light">{{"LEGAL NOTICES" | translate}}</h5>
+                <ul class="list-unstyled mb-0">
+                    <li>
+                        <div class="text-light"> <a href="/assets/legal/condition.html" target="_blank"> {{"TERMNS AND
+                                CONDITION" | translate}}</a></div>
+                    </li>
+                    <li>
+                        <div class="text-light"><a href="/assets/legal/imprint.html" target="_blank"> {{"IMPRINT" |
+                                translate}}</a></div>
+                    </li>
+                    <li>
+                        <div class="text-light"><a href="/assets/legal/privacy_policy.html" target="_blank">{{"PRIVACY
+                                POLICE" | translate}}</a></div>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase text-light">{{"STORE OPENING HOURS"|translate}}</h5>
+                <ul class="list-unstyled mb-0">
+                    <li>
+                        <ul class="list-unstyled mb-0 text-light">
+                            <li>{{"MONDAY"| translate}} - {{"FRIDAY"| translate}}: 9:00 - 18:00</li>
+                            <li>{{"SATURDAY"| translate}}: 9:00 - 14:00</li>
+                            <li>{{"SUNDAY"| translate}}: {{"CLOSED"| translate}}</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase text-light">{{"RESTAURANT OPENING HOURS"|translate}}</h5>
+                <ul class="list-unstyled mb-0">
+                    <li>
+                        <ul class="list-unstyled mb-0 text-light">
+                            <li>{{"MONDAY"| translate}} - {{"FRIDAY"| translate}}: 9:00 - 18:00</li>
+                            <li>{{"SATURDAY"| translate}}: 9:00 - 14:00</li>
+                            <li>{{"SUNDAY"| translate}}: {{"CLOSED"| translate}}</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
