--- a/AngularShop/src/app/home/home.component.html
+++ b/AngularShop/src/app/home/home.component.html
@@ -1,2 +1,60 @@
+<div class="container">
+    <br>
+    <div class="row">
+        <div class="col">
 
-Home
+            <div class="container-fluid">
+                <div class="row py-5">
+
+                    <div class="col-md-6 d-flex align-items-center">
+                        <div class="text-center">
+                            <h2>{{"SHOP DESCRIPTION0" | translate}}</h2>
+                            <p class="lead">{{"SHOP DESCRIPTION1" | translate}}</p>
+                            <p class="lead">{{"SHOP DESCRIPTION2" | translate}}</p>
+                            <p class="lead">{{"SHOP DESCRIPTION3" | translate}}</p>
+                            <p class="lead">{{"SHOP DESCRIPTION4" | translate}}</p>
+                            <a href="/shop" class="btn btn-secondary btn-lg">{{"DISCOVER MORE" | translate}}</a>
+                            <br>
+                            <br>
+                        </div>
+                        
+                    </div>
+
+                    <div class="col-md-6 d-flex align-items-center">
+                        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
+
+                            </ol>
+                            
+                            <div class="carousel-inner">
+
+                                <div class="carousel-item active">
+                                    <img style="width: 100%;" src="Frontimage.jpg"
+                                        class="d-block" alt="...">
+                                </div>
+                           
+                                
+                            </div>
+                            <a class="carousel-control-prev" data-bs-target="#myCarousel" role="button"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" data-bs-target="#myCarousel" role="button"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </a>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+</div>
