--- a/AngularShop/src/app/profil/profil.component.html
+++ b/AngularShop/src/app/profil/profil.component.html
@@ -1,1 +1,103 @@
-<p>profil works!</p>
+<br>
+
+<!--Popup section-->
+<app-custom-modal #CustomModalComponent> </app-custom-modal>
+<!--Popup section ends-->
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-3">
+            <!-- Sidebar with buttons -->
+            <div class="list-group">
+                <button type="button" class="btn btn-secondary active">
+                    {{'ORDER HISTORY' | translate}}
+                </button>
+                <a type="button" [target]="'_blank'"
+                    [href]="[profilpage]"
+                    class="btn btn-secondary">
+                    {{'PROFIL EDIT' | translate}}
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-9">
+            <div class="container mt-5">
+                <h2 class="mb-4" #title>{{"ORDER HISTORY" | translate}}</h2>
+                <div class="accordion" id="orderHistoryAccordion">
+
+
+                    <div *ngFor="let order of orders | paginate: { itemsPerPage: 12, currentPage: page }" class="accordion-item" >
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                [attr.data-bs-target]="'#'+order.orderId" aria-expanded="false" [attr.aria-controls]="'#'+order.orderId">
+                               {{"ORDER NUMBER" | translate}} {{order.orderId}} | {{"CREATION DATE" | translate}} {{convertTimestampToDate(order.created)}} | {{"DELIVERY DATE" | translate}} {{convertTimestampToDate(order.orderDate)}}
+                            </button>
+                        </h2>
+
+                        <div [id]="order.orderId" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                            data-bs-parent="#orderHistoryAccordion">
+                            <button class="btn btn-secondary my-3 mx-2" (click)="loadItemsToCart(order)">{{"RELOAD ITEMS" | translate}}</button>
+                            <div class="accordion-body">
+                                <table class="table table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">{{"PRODUCT ID" | translate}}</th>
+                                            <th scope="col">{{"PRODUCT NAME" | translate}}</th>
+                                            <th scope="col">{{"QUANTITY" | translate}}</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let item of order.orderDetails">
+                                            <th scope="row"><a [routerLink]="['/product/']+'item.product!.productId'"> {{item.product.productId}} </a></th>
+                                            <td> <a [routerLink]="['/product/']+'item.product!.productId'">{{item.product?.productName}}</a></td>
+                                            <td> <a>{{item.quantity}}</a></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Example
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                Order Date: 2023-04-01
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                            data-bs-parent="#orderHistoryAccordion">
+                            <div class="accordion-body">
+                                <table class="table table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">ID</th>
+                                            <th scope="col">Product Name</th>
+                                            <th scope="col">Quantity</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <th scope="row">1</th>
+                                            <td>Example Product 1</td>
+                                            <td>2</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    -->
+   
+                    <pagination-controls (pageChange)="page = $event" (click)="scroll(title)"
+                    [nextLabel]="getTranslation('NEXT')"
+                    [previousLabel]="getTranslation('PREVIOUS')"></pagination-controls>
+                     
+            </div>
+        </div>
+    
+    
+    </div>
+</div>
+
+<br>
