--- a/AngularShop/src/app/profil/profil.component.html
+++ b/AngularShop/src/app/profil/profil.component.html
@@ -48,7 +48,7 @@
                                     <tbody>
                                         <tr *ngFor="let item of order.orderDetails">
                                             <th scope="row"><a [routerLink]="['/product/']+'item.product!.productId'"> {{item.product.productId}} </a></th>
-                                            <td> <a [routerLink]="['/product/']+'item.product!.productId'">{{item.product?.productName}}</a></td>
+                                            <td> <a [routerLink]="['/product/']+'item.product!.productId'">{{item.product.productName}}</a></td>
                                             <td> <a>{{item.quantity}}</a></td>
                                         </tr>
                                     </tbody>
