--- a/AngularShop/src/app/profil/main-profil/main-profil.component.html
+++ b/AngularShop/src/app/profil/main-profil/main-profil.component.html
@@ -2,12 +2,16 @@
     <div class="container-fluid">
         <div class="row">
             <!-- Menu Sidebar -->
-            <div class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+            <div class="col-md-3 col-lg-2 d-md-block sidebar collapse">
                 <div class="list-group">
-                    <a class="list-group-item list-group-item-action"
-                        (click)="selectComponent('subcomponent1')">PROFIL EDIT</a>
-                    <a class="list-group-item list-group-item-action"
-                        (click)="selectComponent('subcomponent2')">ORDER HISTORY</a>
+                    <a class="list-group-item list-group-item-action" (click)="selectComponent('subcomponent1')">PROFIL
+                        EDIT</a>
+                    <a class="list-group-item list-group-item-action" (click)="selectComponent('subcomponent2')">ORDER
+                        HISTORY</a>
+                    <a type="button" [target]="'_blank'" [href]="[profilpage]"
+                        class="list-group-item list-group-item-action">
+                        {{'ACCOUNT SETTING' | translate}}
+                    </a>
                 </div>
             </div>
 
