--- a/AngularShop/src/app/admin-page/admin-page.component.html
+++ b/AngularShop/src/app/admin-page/admin-page.component.html
@@ -2,6 +2,7 @@
 <!--Popup section-->
 <app-custom-modal #CustomModalComponent> </app-custom-modal>
 <!--Popup section ends-->
+<script type="text/comment">
 <div class="container">
   <!-- Left-side menu bar -->
   <div class="row mt-4">
@@ -66,3 +67,5 @@
   </div>
 </div>
 <br>
+
+</script>
