--- a/AngularShop/src/app/checkout/checkout.component.html
+++ b/AngularShop/src/app/checkout/checkout.component.html
@@ -2,6 +2,8 @@
 <app-custom-modal #CustomModalComponent> </app-custom-modal>
 <!--Popup section ends-->
 
+<script type="text/comment">
+
 <div class="container" #container>
     <h1 class="text-center mt-4">{{'CHECKOUT' | translate}}</h1>
 
@@ -103,3 +105,4 @@
     <br>
     <br>
 </div>
+</script>
